# llm-data-gen

./: .gitignore  README.md  pyproject.toml
gen_configs/: debug.toml  ne_qa.toml
nep_qa_dataset/: __main__.py  gen_config.py  generators.py  pipeline.py  preprocess.py  reader.py
nep_qa_dataset/llm/: base.py  dummy.py  openai.py
